# big-pig-farm-mobile

./: .gitignore  .swiftlint.yml  CLAUDE.md  Package.swift  README.md  exportOptions.plist  project.yml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.json
BigPigFarm/: BigPigFarm.entitlements  BigPigFarmApp.swift  ContentView.swift  PrivacyInfo.xcprivacy
BigPigFarmCoreTests/: AcclimationTests.swift  AdoptionTests.swift  AdoptionViewTests.swift  AnimationDataTests.swift  AreaManagerTests.swift  AutoArrangeIntegrationTests.swift  AutoArrangeTests.swift  AutoResourcesTests.swift  BatchUpdateTests.swift  BehaviorControllerUpdateTests.swift  BehaviorDecisionTests.swift  BehaviorMovementTests.swift  BehaviorSeekingTests.swift  BigPigFarmTests.swift  BreedingBirthTests.swift  BreedingProgramTests.swift  BreedingViewTests.swift  CollisionSpatialGridTests.swift  CollisionTests.swift  ConfigTests.swift  ContractsShopTests.swift  CullingReplacementTests.swift  CullingTests.swift  EconomyProtocolsTests.swift  EconomyTests.swift  EmergencyBailoutTests.swift  EnumTests.swift  FacilityArrivalFailTests.swift  FacilityManagerConsumptionTests.swift  FacilityManagerTests.swift  FarmGridTests.swift  GameEngineTests.swift  GameStateTests.swift  GeneticsBreedingTests.swift  GeneticsParityTests.swift  GeneticsTests.swift  GridExpansionTests.swift  ManualRefillTests.swift  ModelEntityExtrasTests.swift  ModelEntityTests.swift  (+30 more)
BigPigFarmTests/: AcclimationTests.swift  AdoptionTests.swift  AdoptionViewTests.swift  AlmanacViewTests.swift  AnimationDataTests.swift  (+80 more)
(+631 files in other folders)
